lib32_DATA += %reldir%/libaclui.a
lib32_DATA += %reldir%/libactiveds.a
lib32_DATA += %reldir%/libadsldpc.a
lib32_DATA += %reldir%/libadvapi32.a
lib32_DATA += %reldir%/libapcups.a
lib32_DATA += %reldir%/libruntimeobject.a
lib32_DATA += %reldir%/libsynchronization.a
lib32_DATA += %reldir%/libauthz.a
lib32_DATA += %reldir%/libavicap32.a
lib32_DATA += %reldir%/libavifil32.a
lib32_DATA += %reldir%/libavrt.a
lib32_DATA += %reldir%/libbcrypt.a
lib32_DATA += %reldir%/libbluetoothapis.a
lib32_DATA += %reldir%/libbootvid.a
lib32_DATA += %reldir%/libbrowcli.a
lib32_DATA += %reldir%/libbthprops.a
lib32_DATA += %reldir%/libcabinet.a
lib32_DATA += %reldir%/libcap.a
lib32_DATA += %reldir%/libcfgmgr32.a
lib32_DATA += %reldir%/libclasspnp.a
lib32_DATA += %reldir%/libclfsw32.a
lib32_DATA += %reldir%/libclusapi.a
lib32_DATA += %reldir%/libcmutil.a
lib32_DATA += %reldir%/libcomctl32.a
lib32_DATA += %reldir%/libcomdlg32.a
lib32_DATA += %reldir%/libconnect.a
lib32_DATA += %reldir%/libcredui.a
#lib32_DATA += %reldir%/libcrtdll.a     # Specialized for W32API conditional
lib32_DATA += %reldir%/libcrypt32.a
lib32_DATA += %reldir%/libcryptbase.a
lib32_DATA += %reldir%/libcryptnet.a
lib32_DATA += %reldir%/libcryptsp.a
lib32_DATA += %reldir%/libcryptxml.a
lib32_DATA += %reldir%/libcscapi.a
lib32_DATA += %reldir%/libctl3d32.a
lib32_DATA += %reldir%/libd2d1.a
lib32_DATA += %reldir%/libd3d8.a
lib32_DATA += %reldir%/libd3d9.a
lib32_DATA += %reldir%/libd3d10.a
lib32_DATA += %reldir%/libd3d11.a
lib32_DATA += %reldir%/libd3d12.a
lib32_DATA += %reldir%/libd3dcompiler_33.a
lib32_DATA += %reldir%/libd3dcompiler_34.a
lib32_DATA += %reldir%/libd3dcompiler_35.a
lib32_DATA += %reldir%/libd3dcompiler_36.a
lib32_DATA += %reldir%/libd3dcompiler_37.a
lib32_DATA += %reldir%/libd3dcompiler_38.a
lib32_DATA += %reldir%/libd3dcompiler_39.a
lib32_DATA += %reldir%/libd3dcompiler_40.a
lib32_DATA += %reldir%/libd3dcompiler_41.a
lib32_DATA += %reldir%/libd3dcompiler_42.a
lib32_DATA += %reldir%/libd3dcompiler_43.a
lib32_DATA += %reldir%/libd3dcompiler_46.a
lib32_DATA += %reldir%/libd3dcompiler_47.a
lib32_DATA += %reldir%/libd3dcsx_46.a
lib32_DATA += %reldir%/libd3dcsxd_43.a
lib32_DATA += %reldir%/libd3dim.a
lib32_DATA += %reldir%/libd3drm.a
lib32_DATA += %reldir%/libd3dx10_33.a
lib32_DATA += %reldir%/libd3dx10_34.a
lib32_DATA += %reldir%/libd3dx10_35.a
lib32_DATA += %reldir%/libd3dx10_36.a
lib32_DATA += %reldir%/libd3dx10_37.a
lib32_DATA += %reldir%/libd3dx10_38.a
lib32_DATA += %reldir%/libd3dx10_39.a
lib32_DATA += %reldir%/libd3dx10_40.a
lib32_DATA += %reldir%/libd3dx10_41.a
lib32_DATA += %reldir%/libd3dx10_42.a
lib32_DATA += %reldir%/libd3dx10_43.a
lib32_DATA += %reldir%/libd3dx11_42.a
lib32_DATA += %reldir%/libd3dx11_43.a
lib32_DATA += %reldir%/libd3dx8d.a
lib32_DATA += %reldir%/libd3dx9_24.a
lib32_DATA += %reldir%/libd3dx9_25.a
lib32_DATA += %reldir%/libd3dx9_26.a
lib32_DATA += %reldir%/libd3dx9_27.a
lib32_DATA += %reldir%/libd3dx9_28.a
lib32_DATA += %reldir%/libd3dx9_29.a
lib32_DATA += %reldir%/libd3dx9_30.a
lib32_DATA += %reldir%/libd3dx9_31.a
lib32_DATA += %reldir%/libd3dx9_32.a
lib32_DATA += %reldir%/libd3dx9_33.a
lib32_DATA += %reldir%/libd3dx9_34.a
lib32_DATA += %reldir%/libd3dx9_35.a
lib32_DATA += %reldir%/libd3dx9_36.a
lib32_DATA += %reldir%/libd3dx9_37.a
lib32_DATA += %reldir%/libd3dx9_38.a
lib32_DATA += %reldir%/libd3dx9_39.a
lib32_DATA += %reldir%/libd3dx9_40.a
lib32_DATA += %reldir%/libd3dx9_41.a
lib32_DATA += %reldir%/libd3dx9_42.a
lib32_DATA += %reldir%/libd3dx9_43.a
lib32_DATA += %reldir%/libd3dx9d.a
lib32_DATA += %reldir%/libd3dxof.a
lib32_DATA += %reldir%/libdavclnt.a
lib32_DATA += %reldir%/libdavhlpr.a
lib32_DATA += %reldir%/libdbgeng.a
lib32_DATA += %reldir%/libdbghelp.a
lib32_DATA += %reldir%/libdcomp.a
lib32_DATA += %reldir%/libddraw.a
lib32_DATA += %reldir%/libdevmgr.a
lib32_DATA += %reldir%/libdevobj.a
lib32_DATA += %reldir%/libdevrtl.a
lib32_DATA += %reldir%/libdfscli.a
lib32_DATA += %reldir%/libdhcpcsvc.a
lib32_DATA += %reldir%/libdhcpcsvc6.a
lib32_DATA += %reldir%/libdhcpsapi.a
#lib32_DATA += %reldir%/libdinput.a   # Handled by custom rule
#lib32_DATA += %reldir%/libdinput8.a  # Handled by custom rule
lib32_DATA += %reldir%/libdismapi.a
lib32_DATA += %reldir%/libdlcapi.a
lib32_DATA += %reldir%/libdnsapi.a
lib32_DATA += %reldir%/libdpapi.a
lib32_DATA += %reldir%/libdplayx.a
lib32_DATA += %reldir%/libdpnaddr.a
lib32_DATA += %reldir%/libdpnet.a
lib32_DATA += %reldir%/libdpnlobby.a
lib32_DATA += %reldir%/libdpvoice.a
lib32_DATA += %reldir%/libdsetup.a
lib32_DATA += %reldir%/libdsound.a
lib32_DATA += %reldir%/libdsrole.a
lib32_DATA += %reldir%/libdssec.a
lib32_DATA += %reldir%/libdwmapi.a
lib32_DATA += %reldir%/libdwrite.a
lib32_DATA += %reldir%/libdxapi.a
lib32_DATA += %reldir%/libdxgi.a
lib32_DATA += %reldir%/libdxva2.a
lib32_DATA += %reldir%/libeappcfg.a
lib32_DATA += %reldir%/libeappgnui.a
lib32_DATA += %reldir%/libeapphost.a
lib32_DATA += %reldir%/libeappprxy.a
lib32_DATA += %reldir%/libelscore.a
lib32_DATA += %reldir%/libesent.a
lib32_DATA += %reldir%/libevr.a
lib32_DATA += %reldir%/libfaultrep.a
lib32_DATA += %reldir%/libfeclient.a
lib32_DATA += %reldir%/libfontsub.a
lib32_DATA += %reldir%/libfwpuclnt.a
lib32_DATA += %reldir%/libgdi32.a
#lib32_DATA += %reldir%/libgdiplus.a  # Handled by custom rule
lib32_DATA += %reldir%/libglaux.a
lib32_DATA += %reldir%/libglu32.a
#lib32_DATA += %reldir%/libglut.a     # Specialized for W32API conditional
lib32_DATA += %reldir%/libglut32.a
lib32_DATA += %reldir%/libgpapi.a
lib32_DATA += %reldir%/libgpedit.a
lib32_DATA += %reldir%/libgpprefcl.a
lib32_DATA += %reldir%/libgpscript.a
lib32_DATA += %reldir%/libgptext.a
lib32_DATA += %reldir%/libhal.a
lib32_DATA += %reldir%/libhid.a
lib32_DATA += %reldir%/libhidclass.a
lib32_DATA += %reldir%/libhidparse.a
lib32_DATA += %reldir%/libhtmlhelp.a
lib32_DATA += %reldir%/libhttpapi.a
lib32_DATA += %reldir%/libicmui.a
lib32_DATA += %reldir%/libigmpagnt.a
lib32_DATA += %reldir%/libimagehlp.a
lib32_DATA += %reldir%/libimm32.a
lib32_DATA += %reldir%/libiphlpapi.a
lib32_DATA += %reldir%/libiscsidsc.a
#lib32_DATA += %reldir%/libkernel32.a  # Handled by custom rule
lib32_DATA += %reldir%/libks.a
lib32_DATA += %reldir%/libksecdd.a
lib32_DATA += %reldir%/libksproxy.a
#lib32_DATA += %reldir%/libksuser.a    # Handled by custom rule
lib32_DATA += %reldir%/libktmw32.a
lib32_DATA += %reldir%/liblogoncli.a
lib32_DATA += %reldir%/liblz32.a
lib32_DATA += %reldir%/libmapi32.a
lib32_DATA += %reldir%/libmcd.a
lib32_DATA += %reldir%/libmf.a
lib32_DATA += %reldir%/libmfcore.a
lib32_DATA += %reldir%/libmfcuia32.a
lib32_DATA += %reldir%/libmfplat.a
lib32_DATA += %reldir%/libmfplay.a
lib32_DATA += %reldir%/libmfreadwrite.a
lib32_DATA += %reldir%/libmfsensorgroup.a
lib32_DATA += %reldir%/libmgmtapi.a
lib32_DATA += %reldir%/libmi.a
lib32_DATA += %reldir%/libmincore.a
lib32_DATA += %reldir%/libmmdevapi.a
lib32_DATA += %reldir%/libmpr.a
lib32_DATA += %reldir%/libmprapi.a
lib32_DATA += %reldir%/libmqrt.a
lib32_DATA += %reldir%/libmsacm32.a
lib32_DATA += %reldir%/libmscms.a
lib32_DATA += %reldir%/libmsctf.a
lib32_DATA += %reldir%/libmsctfmonitor.a
lib32_DATA += %reldir%/libmsdmo.a
lib32_DATA += %reldir%/libmsdrm.a
lib32_DATA += %reldir%/libmshtml.a
lib32_DATA += %reldir%/libmshtmled.a
lib32_DATA += %reldir%/libmsi.a
lib32_DATA += %reldir%/libmsimg32.a
lib32_DATA += %reldir%/libmsoledbsql.a
lib32_DATA += %reldir%/libmstask.a
#lib32_DATA += %reldir%/libmsvcp60.a     # Specialized for W32API conditional
lib32_DATA += %reldir%/libmsvfw32.a
lib32_DATA += %reldir%/libmswsock.a
lib32_DATA += %reldir%/libncrypt.a
lib32_DATA += %reldir%/libnddeapi.a
lib32_DATA += %reldir%/libndfapi.a
lib32_DATA += %reldir%/libndis.a
lib32_DATA += %reldir%/libnetapi32.a
lib32_DATA += %reldir%/libnetio.a
lib32_DATA += %reldir%/libnetjoin.a
lib32_DATA += %reldir%/libnetutils.a
lib32_DATA += %reldir%/libnewdev.a
lib32_DATA += %reldir%/libnormaliz.a
lib32_DATA += %reldir%/libntdll.a
lib32_DATA += %reldir%/libntdllcrt.a
lib32_DATA += %reldir%/libntdsapi.a
lib32_DATA += %reldir%/libntmsapi.a
#lib32_DATA += %reldir%/libntoskrnl.a    # libntoskrnl.a is provided by a custom rule in the main Makefile.am
lib32_DATA += %reldir%/libntquery.a
lib32_DATA += %reldir%/libodbc32.a
lib32_DATA += %reldir%/libodbccp32.a
lib32_DATA += %reldir%/libole32.a
lib32_DATA += %reldir%/liboleacc.a
lib32_DATA += %reldir%/liboleaut32.a
lib32_DATA += %reldir%/libolecli32.a
lib32_DATA += %reldir%/liboledlg.a
lib32_DATA += %reldir%/libolepro32.a
lib32_DATA += %reldir%/libolesvr32.a
lib32_DATA += %reldir%/libolethk32.a
lib32_DATA += %reldir%/libopends60.a
lib32_DATA += %reldir%/libopengl32.a
lib32_DATA += %reldir%/libp2p.a
lib32_DATA += %reldir%/libp2pcollab.a
lib32_DATA += %reldir%/libp2pgraph.a
lib32_DATA += %reldir%/libpathcch.a
lib32_DATA += %reldir%/libpcwum.a
lib32_DATA += %reldir%/libpdh.a
lib32_DATA += %reldir%/libpdhui.a
lib32_DATA += %reldir%/libpenwin32.a
lib32_DATA += %reldir%/libpkpd32.a
lib32_DATA += %reldir%/libpowrprof.a
lib32_DATA += %reldir%/libprntvpt.a
lib32_DATA += %reldir%/libpropsys.a
lib32_DATA += %reldir%/libpsapi.a
lib32_DATA += %reldir%/libquartz.a
lib32_DATA += %reldir%/libquery.a
lib32_DATA += %reldir%/libqutil.a
lib32_DATA += %reldir%/libqwave.a
lib32_DATA += %reldir%/librapi.a
lib32_DATA += %reldir%/librasapi32.a
lib32_DATA += %reldir%/librasdlg.a
lib32_DATA += %reldir%/libresutil.a
lib32_DATA += %reldir%/librpcdce4.a
lib32_DATA += %reldir%/librpcdiag.a
lib32_DATA += %reldir%/librpchttp.a
lib32_DATA += %reldir%/librpcns4.a
lib32_DATA += %reldir%/librpcrt4.a
lib32_DATA += %reldir%/librstrtmgr.a
lib32_DATA += %reldir%/librtm.a
lib32_DATA += %reldir%/librtutils.a
lib32_DATA += %reldir%/libsamcli.a
lib32_DATA += %reldir%/libschannel.a
lib32_DATA += %reldir%/libschedcli.a
lib32_DATA += %reldir%/libscsiport.a
lib32_DATA += %reldir%/libsecur32.a
lib32_DATA += %reldir%/libsecurity.a
lib32_DATA += %reldir%/libsensapi.a
lib32_DATA += %reldir%/libsens.a
lib32_DATA += %reldir%/libsetupapi.a
lib32_DATA += %reldir%/libshcore.a
#lib32_DATA += %reldir%/libshell32.a    # Handled by custom rule
lib32_DATA += %reldir%/libshfolder.a
lib32_DATA += %reldir%/libshlwapi.a
lib32_DATA += %reldir%/libslc.a
lib32_DATA += %reldir%/libslcext.a
lib32_DATA += %reldir%/libslwga.a
lib32_DATA += %reldir%/libsnmpapi.a
lib32_DATA += %reldir%/libspoolss.a
lib32_DATA += %reldir%/libsrvcli.a
lib32_DATA += %reldir%/libsspicli.a
lib32_DATA += %reldir%/libsvrapi.a
lib32_DATA += %reldir%/libsxs.a
lib32_DATA += %reldir%/libt2embed.a
lib32_DATA += %reldir%/libtapi32.a
lib32_DATA += %reldir%/libtbs.a
lib32_DATA += %reldir%/libtdh.a
lib32_DATA += %reldir%/libtdi.a
lib32_DATA += %reldir%/libtxfw32.a
lib32_DATA += %reldir%/liburl.a
lib32_DATA += %reldir%/liburlmon.a
lib32_DATA += %reldir%/libusbcamd.a
lib32_DATA += %reldir%/libusbcamd2.a
lib32_DATA += %reldir%/libusbd.a
lib32_DATA += %reldir%/libusbport.a
lib32_DATA += %reldir%/libuser32.a
lib32_DATA += %reldir%/libuserenv.a
lib32_DATA += %reldir%/libusp10.a
lib32_DATA += %reldir%/libuxtheme.a
lib32_DATA += %reldir%/libvdmdbg.a
lib32_DATA += %reldir%/libversion.a
lib32_DATA += %reldir%/libvideoprt.a
lib32_DATA += %reldir%/libvirtdisk.a
lib32_DATA += %reldir%/libvfw32.a
lib32_DATA += %reldir%/libvss_ps.a
lib32_DATA += %reldir%/libvssapi.a
lib32_DATA += %reldir%/libwdsclient.a
lib32_DATA += %reldir%/libwdsclientapi.a
lib32_DATA += %reldir%/libwdscore.a
lib32_DATA += %reldir%/libwdscsl.a
lib32_DATA += %reldir%/libwdsimage.a
lib32_DATA += %reldir%/libwdstptc.a
lib32_DATA += %reldir%/libwdsupgcompl.a
lib32_DATA += %reldir%/libwdsutil.a
lib32_DATA += %reldir%/libwebauthn.a
lib32_DATA += %reldir%/libwebsocket.a
lib32_DATA += %reldir%/libwecapi.a
lib32_DATA += %reldir%/libwer.a
lib32_DATA += %reldir%/libwevtapi.a
lib32_DATA += %reldir%/libwevtfwd.a
lib32_DATA += %reldir%/libwiadss.a
lib32_DATA += %reldir%/libwimgapi.a
lib32_DATA += %reldir%/libwin32k.a
lib32_DATA += %reldir%/libwin32spl.a
lib32_DATA += %reldir%/libwinhttp.a
lib32_DATA += %reldir%/libwininet.a
lib32_DATA += %reldir%/libwinmm.a
lib32_DATA += %reldir%/libwinscard.a
lib32_DATA += %reldir%/libwinspool.a
lib32_DATA += %reldir%/libwinstrm.a
lib32_DATA += %reldir%/libwintrust.a
lib32_DATA += %reldir%/libwinusb.a
lib32_DATA += %reldir%/libwkscli.a
lib32_DATA += %reldir%/libwlanapi.a
lib32_DATA += %reldir%/libwlanui.a
lib32_DATA += %reldir%/libwlanutil.a
lib32_DATA += %reldir%/libwldap32.a
lib32_DATA += %reldir%/libwmilib.a
lib32_DATA += %reldir%/libwofutil.a
lib32_DATA += %reldir%/libwow32.a
#lib32_DATA += %reldir%/libws2_32.a      # Handled by custom rule
lib32_DATA += %reldir%/libwsdapi.a
lib32_DATA += %reldir%/libwsnmp32.a
lib32_DATA += %reldir%/libwsock32.a
lib32_DATA += %reldir%/libwst.a
lib32_DATA += %reldir%/libwtsapi32.a
lib32_DATA += %reldir%/libx3daudio1_2.a
lib32_DATA += %reldir%/libx3daudio1_3.a
lib32_DATA += %reldir%/libx3daudio1_4.a
lib32_DATA += %reldir%/libx3daudio1_5.a
lib32_DATA += %reldir%/libx3daudio1_6.a
lib32_DATA += %reldir%/libx3daudio1_7.a
lib32_DATA += %reldir%/libx3daudiod1_7.a
lib32_DATA += %reldir%/libxapofx1_0.a
lib32_DATA += %reldir%/libxapofx1_1.a
lib32_DATA += %reldir%/libxapofx1_2.a
lib32_DATA += %reldir%/libxapofx1_3.a
lib32_DATA += %reldir%/libxapofx1_4.a
lib32_DATA += %reldir%/libxapofx1_5.a
lib32_DATA += %reldir%/libxapofxd1_5.a
lib32_DATA += %reldir%/libxaudio2_8.a
lib32_DATA += %reldir%/libxinput1_1.a
lib32_DATA += %reldir%/libxinput1_2.a
lib32_DATA += %reldir%/libxinput1_3.a
lib32_DATA += %reldir%/libxinput1_4.a
lib32_DATA += %reldir%/libxinput9_1_0.a
lib32_DATA += %reldir%/libxmllite.a
lib32_DATA += %reldir%/libwindowsapp.a
